Refactor generics challenge